# saci-database

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  test_cpvs.py  write_asp.py
cpvs/: cpv01_mavlink_motors.py
devices/px4_quadcopter_device/: __init__.py  px4_controller.py
nist_db/: README.md  config.py  exporters.py  extractors.py  main.py  mitre_api.py  nist_api.py  processors.py
saci_db/cpvs/: __init__.py  cpv001_sik_mavlink_motors.py  cpv002_gps_spoofing_move.py  cpv003_wifi_deauth_dos.py  cpv004_wifi_icmp_flooding.py  cpv005_adv_ml_untrack.py  cpv006_serial_motor_rollover.py  cpv007_pmagnet_compass_dos.py  cpv008_wifi_webserver_crash.py  cpv009_gps_spoofing_static.py  cpv010_depthcamera_spoofing_classic.py  cpv011_serial_motor_throttle.py  cpv012_wifi_http_move.py  cpv013_gps_spoofing_loop.py  cpv014_serial_arduino_control.py  cpv015_wifi_http_stop.py  cpv016_serial_motor_redirect.py  cpv017_tmagnet_compass_disorient.py  cpv018_smbus_battery_shutdown.py  cpv019_debug_esc_flash.py  cpv01_mavlink_motors.py  cpv01_sik_mavlink_motors.lp  cpv01_sik_mavlink_motors.py  cpv020_serial_esc_bootloader.py  cpv021_serial_esc_reset.py  cpv022_serial_esc_discharge.py  cpv023_serial_esc_bufferoverflow.py  cpv024_serial_esc_execcmd.py  cpv025_serial_motor_overheat.py  cpv026_acoustic_spoofing_accelerometer.py  cpv027_acoustic_spoofing_gyroscope_dos.py  cpv028_acoustic_spoofing_magnetometer.py  cpv029_airflow_barometer_spoofing.py  cpv02_gps_move.py  cpv02_gps_position_move.lp  cpv02_gps_position_move.py  cpv030_projector_opticalflow_spoofing.py  cpv031_depthcamera_spoofing_ml.py  cpv031_laser_depthcamera_spoofing.py  cpv032_emi_motor_block.py  (+140 more)
saci_db/devices/: __init__.py
saci_db/nl2asp/: .gitignore  generate_vulnerability_files.py  run_vulnerability_assessment.py
saci_db/vulns/: __init__.py  accelerometer_spoofing_vuln.py  airspeed_spoofing_vuln.py  ardiscovery_flooding_vuln.py  ardscovery_mitm_vuln.py  ardscovery_overflow_vuln.py  barometer_obstruction_vuln.py  barometer_spoofing_vuln.py  battery_exhaustion_vuln.py  ble_fingeringprinting_vuln.py  ble_jamming_vuln.py  can_pwm_scheduling_vuln.py  compass_spoofing.py  compass_spoofing_vuln.py  control_loop_instability_vuln.py  controller_integerity_vuln.py  deauth_vuln.py  debug_interface_vuln.py  depth_camera_vuln.py  depthcamera_spoofing_vuln.py  dxmx_jamming_vuln.py  emergency_stop_vuln.py  exposed_serial_connection_vuln.py  expresslrs_fw_overwrite.py  fault_injection_vuln.py  firmware_overwrite_vuln.py  gcs_rf_blocking_vuln.py  gnss_spoofing_vuln.py  gps_jamming_vuln.py  gps_passthrough_foreground_vuln.py  gps_spoofing_vuln.py  gyroscope_spoofing_vuln.py  icmp_flooding_vuln.py  icmp_vuln.py  knowncreds.py  lack_authentification.py  lack_beacon_filtering_vuln.py  (+54 more)
(+37 files in other folders)
