[build-system]
requires = ["setuptools>=61.2", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "saci_db"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.11",
]
license = {text = "BSD 2 Clause"}
description = "Software-Aware CPV Identifier"
requires-python = ">= 3.11"
dependencies = [
    "saci",
    "networkx",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/senpai-on-fire/saci-database"

[project.optional-dependencies]
tests = ["pytest"]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "saci_db.__version__"}

[tool.ruff]
line-length = 120 # this is too long. let's bring it down in the future

[tool.ruff.lint]
select = [
    "E",
    "F",
]
ignore = [
    # Long lines. This should be fixed in the future
    # "E501",
]
