[metadata]
name = saci_db
version = attr: saci_db.__version__
url = https://github.com/senpai-on-fire/saci-database
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.11
license = BSD 2 Clause
license_files = LICENSE
description = Software-Aware CPV Identifier
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    saci
    networkx
python_requires = >= 3.8
packages = find:

[options.extras_require]
tests =
    pytest
